--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,39 @@
 <resources>
-    <string name="app_name">Lesson 1</string>
+    <string name="app_name">GB Weather</string>
+    <string name="Hello">GB Weather</string>
+    <string name="helloButton">Hello!</string>
+    <string name="FirstProgram">This is my first program on Android</string>
+    <string name="choose_location">Choose location</string>
+    <string name="radiobutton1">St. Petersburg</string>
+    <string name="radiobutton2">Vilnius</string>
+    <string name="radiobutton3">Tenerife</string>
+    <string name="city">St.Petersburg</string>
+    <string name="cityV">Vilnius</string>
+    <string name="cityT">Tenerife</string>
+    <string name="temperature">Temperature(C):</string>
+    <string name="humidity">Humidity:</string>
+    <string name="pressure">Atmosphere pressure:</string>
+    <string name="precipitation">Precipitation:</string>
+    <string name="condition">Weather condition:</string>
+    <string name="weatherForecast">Weather forecast for 3 days</string>
+    <string name="cityTemp">+15,4</string>
+    <string name="cityHumid">78%</string>
+    <string name="cityPressure">767 mm Hg</string>
+    <string name="cityPrecep">Rain</string>
+    <string name="cityCond">Mainly cloudy</string>
+    <string name="cityTempV">+18</string>
+    <string name="cityHumidV">53%</string>
+    <string name="cityPressureV">749 mm Hg</string>
+    <string name="cityPrecepV">Absent</string>
+    <string name="cityCondV">Cloudy</string>
+    <string name="cityTempT">+27,1</string>
+    <string name="cityHumidT">58%</string>
+    <string name="cityPressureT">738 mm Hg</string>
+    <string name="cityPrecepT">Absent</string>
+    <string name="cityCondT">Sunny</string>
+    <string name="friday">Friday</string>
+    <string name="sat">Saturday</string>
+    <string name="sunday">Sunday</string>
+    <string name="fdt">"Day temp: "</string>
+    <string name="fnt">"Night temp: "</string>
 </resources>
