--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,10 @@
     <string name="sunday">Sunday</string>
     <string name="fdt">"Day temp: "</string>
     <string name="fnt">"Night temp: "</string>
+    <string name="chgCity">"Choose city"</string>
+    <string name="settings">"Settings"</string>
+    <string name="choose_city">Choose City</string>
+    <string name="type_city_name">Type city name</string>
+    <string name="search">Search</string>
+    <string name="change_city">Change city</string>
 </resources>
