weather interface (saving)

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -21,17 +21,17 @@
     <string name="cityHumid">78%</string>
     <string name="cityPressure">767 мм рт. ст.</string>
     <string name="cityPrecep">Дождь</string>
-    <string name="cityCond">Пасмурно</string>
+    <string name="cityCond">3</string>
     <string name="cityTempV">+18</string>
     <string name="cityHumidV">53%</string>
     <string name="cityPressureV">749 рт. ст.</string>
     <string name="cityPrecepV">нет</string>
-    <string name="cityCondV">Облачно</string>
+    <string name="cityCondV">2</string>
     <string name="cityTempT">+27,1</string>
     <string name="cityHumidT">58%</string>
     <string name="cityPressureT">738 рт. ст.</string>
     <string name="cityPrecepT">нет</string>
-    <string name="cityCondT">Ясно</string>
+    <string name="cityCondT">1</string>
     <string name="friday">Пятница</string>
     <string name="sat">Суббота</string>
     <string name="sunday">Воскресенье</string>
