--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,17 +20,17 @@
     <string name="cityHumid">78%</string>
     <string name="cityPressure">767 mm Hg</string>
     <string name="cityPrecep">Rain</string>
-    <string name="cityCond">Mainly cloudy</string>
+    <string name="cityCond">3</string>
     <string name="cityTempV">+18</string>
     <string name="cityHumidV">53%</string>
     <string name="cityPressureV">749 mm Hg</string>
     <string name="cityPrecepV">Absent</string>
-    <string name="cityCondV">Cloudy</string>
+    <string name="cityCondV">2</string>
     <string name="cityTempT">+27,1</string>
     <string name="cityHumidT">58%</string>
     <string name="cityPressureT">738 mm Hg</string>
     <string name="cityPrecepT">Absent</string>
-    <string name="cityCondT">Sunny</string>
+    <string name="cityCondT">1</string>
     <string name="friday">Friday</string>
     <string name="sat">Saturday</string>
     <string name="sunday">Sunday</string>
