--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,23 +10,23 @@
     <string name="city">St.Petersburg</string>
     <string name="cityV">Vilnius</string>
     <string name="cityT">Tenerife</string>
-    <string name="temperature">Temperature(C):</string>
+    <string name="temperature">Temperature(°C):</string>
     <string name="humidity">Humidity:</string>
     <string name="pressure">Atmosphere pressure:</string>
     <string name="precipitation">Precipitation:</string>
     <string name="condition">Weather condition:</string>
     <string name="weatherForecast">Weather forecast for 3 days</string>
-    <string name="cityTemp">+15,4</string>
+    <string name="cityTemp">+15,4°С</string>
     <string name="cityHumid">78%</string>
     <string name="cityPressure">767 mm Hg</string>
     <string name="cityPrecep">Rain</string>
     <string name="cityCond">3</string>
-    <string name="cityTempV">+18</string>
+    <string name="cityTempV">+18°С</string>
     <string name="cityHumidV">53%</string>
     <string name="cityPressureV">749 mm Hg</string>
     <string name="cityPrecepV">Absent</string>
     <string name="cityCondV">2</string>
-    <string name="cityTempT">+27,1</string>
+    <string name="cityTempT">+27,1°С</string>
     <string name="cityHumidT">58%</string>
     <string name="cityPressureT">738 mm Hg</string>
     <string name="cityPrecepT">Absent</string>
@@ -54,4 +54,5 @@
     <string name="degree">Degree</string>
     <string name="fahrenheit">Fahrenheit</string>
     <string name="celcius">Celsius</string>
+    <string name="more_on_gismeteo">More on GisMeteo</string>
 </resources>
