--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="precipitation">Precipitation:</string>
     <string name="condition">Weather condition:</string>
     <string name="weatherForecast">Weather forecast for 3 days</string>
-    <string name="cityTemp">+15,4°С</string>
+    <string name="cityTemp">+15.4°С</string>
     <string name="cityHumid">78%</string>
     <string name="cityPressure">767 mm Hg</string>
     <string name="cityPrecep">Rain</string>
@@ -26,7 +26,7 @@
     <string name="cityPressureV">749 mm Hg</string>
     <string name="cityPrecepV">Absent</string>
     <string name="cityCondV">2</string>
-    <string name="cityTempT">+27,1°С</string>
+    <string name="cityTempT">+27.1°С</string>
     <string name="cityHumidT">58%</string>
     <string name="cityPressureT">738 mm Hg</string>
     <string name="cityPrecepT">Absent</string>
@@ -55,4 +55,16 @@
     <string name="fahrenheit">Fahrenheit</string>
     <string name="celcius">Celsius</string>
     <string name="more_on_gismeteo">More on GisMeteo</string>
+    <string name="wind">Wind:</string>
+    <string name="sunrise">Sunrise:</string>
+    <string name="sunset">Sunset:</string>
+    <string name="precepitaion">Precepitaion%:</string>
+    <string name="uv_level">UV level:</string>
+    <string name="_4_m_s_sw">4 m/s, SW</string>
+    <string name="_5_35">5:35</string>
+    <string name="_20_24">20:24</string>
+    <string name="_22">22%</string>
+    <string name="_1">1</string>
+    <string name="windV">6 m/s, W</string>
+    <string name="windT">5 m/s, ESE</string>
 </resources>
